force-app/main/default/objects/Protocolo__c/Protocolo__c.object-meta.xml
<CustomObject>
    <label>Protocolo</label>
    <nameField>
        <displayFormat>{MM}{YY}{0000}{DD}</displayFormat>
        <label>Número Protocolo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protocolos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>