force-app/main/default/objects/Protocolo__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Protocolos</relationshipLabel>
    <relationshipName>Protocolos</relationshipName>
    <type>Lookup</type>
</CustomField>