force-app/main/default/objects/Protocolo__c/fields/OrigemProtocoloMessaging__c.field-meta.xml
<CustomField>
    <fullName>OrigemProtocoloMessaging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origem Protocolo de Messaging</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Protocolos</relationshipLabel>
    <relationshipName>Protocolos</relationshipName>
    <type>Lookup</type>
</CustomField>