force-app/main/default/objects/Protocolo__c/fields/SeContaAtribuida__c.field-meta.xml
<CustomField>
    <fullName>SeContaAtribuida__c</fullName>
    <formula>NOT(ISBLANK(Conta__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta Atribuída?</label>
    <type>Checkbox</type>
</CustomField>