force-app/main/default/objects/Protocolo__c/fields/SeContatoAtribuido__c.field-meta.xml
<CustomField>
    <fullName>SeContatoAtribuido__c</fullName>
    <formula>NOT(ISBLANK(Contato__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contato Atribuído?</label>
    <type>Checkbox</type>
</CustomField>