force-app/main/default/objects/Protocolo__c/fields/SeVinculoContaPessoal__c.field-meta.xml
<CustomField>
    <fullName>SeVinculoContaPessoal__c</fullName>
    <formula>Conta__r.RecordType.DeveloperName = &apos;PersonAccount&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vinculo com Conta Pessoal?</label>
    <type>Checkbox</type>
</CustomField>